# HEMS-Core-integration

./: LICENSE  README.md  hacs.json  pyproject.toml
custom_components/hems/: __init__.py  binary_sensor.py  config_flow.py  const.py  controller.py  coordinator.py  decision_engine.py  device_manager.py  diagnostics.py  energy_manager.py  entity.py  manifest.json  scheduler.py  sensor.py  strings.json
custom_components/hems/adapters/: __init__.py  base.py  zendure.py  zendure_manager.py
custom_components/hems/api/: __init__.py  client.py  ecotracker.py  exceptions.py
custom_components/hems/core/: deadband_filter.py  filter.py  hysteresis_filter.py  median_filter.py  moving_average.py  power_history.py  rate_limiter.py
custom_components/hems/models/: __init__.py  device_state.py  grid_state.py  power_goal.py  power_request.py
custom_components/hems/translations/: de.json
tests/: test_core_filters.py  test_decision_engine.py  test_device_manager.py  test_energy_manager.py  test_models.py  test_scheduler.py  test_zendure_ac_mode.py  test_zendure_adapter.py  test_zendure_manager.py
