[project]
name = "hems"
version = "0.0.1"
description = "Home Energy Management System for Home Assistant"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
